==> beber007/escapement/ZottaOS/CORTEX-Mx/STM32/ZottaOS_TimerEvent.c <==
#include "ZottaOS_CortexMx.h"
#include "ZottaOS.h"
#include "ZottaOS_TimerEvent.h"
#define SHIFT_TIME_LIMIT    0x40000000 // = 2^30
#define SHIFT_TIME_LIMIT_16 0x00004000 // = 2^30 >> 16
      #define BASE_TIM1 0x40012C00
      #define BASE_TIM1 0x40010000
   #define BASE_TIM2 0x40000000
   #define BASE_TIM3 0x40000400
   #define BASE_TIM4 0x40000800
   #define BASE_TIM5 0x40000C00
      #define BASE_TIM8 0x40013400
      #define BASE_TIM8 0x40010400
      #define BASE_TIM9 0x40010800
      #define BASE_TIM9 0x40014C00
      #define BASE_TIM9 0x40014000
      #define BASE_TIM10 0x40010C00
      #define BASE_TIM10 0x40015000
      #define BASE_TIM10 0x40014400
      #define BASE_TIM11 0x40011000
      #define BASE_TIM11 0x40015400
      #define BASE_TIM11 0x40014800
   #define BASE_TIM12 0x40001800
   #define BASE_TIM13 0x40001C00
   #define BASE_TIM14 0x40002000
   #define BASE_TIM15 0x40014000
   #define BASE_TIM16 0x40014400
   #define BASE_TIM17 0x40014800
#define OFFSET_CONTROL1         0x00
#define OFFSET_INT_ENABLE       0x0C
#define OFFSET_STATUS           0x10
#define OFFSET_EVENT_GENERATION 0x14
#define OFFSET_COUNTER          0x24
#define OFFSET_PRESCALER        0x28
#define OFFSET_AUTORELOAD       0x2C
#define OFFSET_COMPARATOR       0x34
  #define IRQ_SET_ENABLE_REGISTER 0xE000E100 // 0xE000E100 to 0xE000E11C (see CortexMx_TRM)
  #define IRQ_PRIORITY_REGISTER   0xE000E400 // 0xE000E400 to 0xE000E41F (see CortexMx_TRM)

BOOL OSScheduleTimerEvent(void *event, UINT32 delay, UINT8 interruptIndex)
{
  TIMER_EVENT_NODE *timerEventNode;
  TIMER_ISR_DATA *device;
  INSERTQUEUE_OP des, *pendingOp;
  device = (TIMER_ISR_DATA *)OSGetTimerISRDescriptor(interruptIndex,GetInterruptSubIndex(interruptIndex));
  if ((timerEventNode = GetFreeNode(device)) == NULL)
     return FALSE;
  /* Because the timer ISR can shift the current time, the time at which this event oc-
  ** curs is done in 2 steps. The time is determined here and then transferred to the
  ** event at the last moment so that if there is a time shift, it can be detected and
  ** corrected. */
  #if defined(STM32L1XXXX) && defined(OS_IO_TIM5)
     if (device->Base == BASE_TIM5) {
  #elif defined(STM32F2XXXX) || defined(STM32F4XXXX)
     if (device->Base == BASE_TIM2 || device->Base == BASE_TIM5) {
  #endif
  #if defined(STM32L1XXXX) && defined(OS_IO_TIM5) ||  defined(STM32F2XXXX) || defined(STM32F4XXXX)
        /* 32-bit counter version */
        do {
           des.Version = device->Time; // Save current version number to detect current time shifting
           des.Time = *(UINT32 *)(device->Base + OFFSET_COUNTER) + delay;
        } while (des.Version != device->Time);
     }
     else {
  #endif
        /* 16-bit counter version */
        do {
           des.Version = device->Time; // Save current 16-bit MSB time to detect current time shifting
           des.Time = *(UINT16 *)(device->Base + OFFSET_COUNTER) + delay + (des.Version << 16);
        } while (des.Version != device->Time);
  #if defined(STM32L1XXXX) && defined(OS_IO_TIM5) ||  defined(STM32F2XXXX) || defined(STM32F4XXXX)
     }
  #endif
  timerEventNode->Time = -1;   // Set at an uninitialized sentinel value
  timerEventNode->Event = event;
  des.EventOp = InsertEventOp; // Prepare the insertion so that other task may complete
  des.Done = FALSE;            // it.
  des.Left = (TIMER_EVENT_NODE *)&device->EventQueue;
  des.Node = timerEventNode;
  des.GeneratedInterrupt = FALSE;
  pendingOp = (INSERTQUEUE_OP *)device->PendingQueueOperation;
  if (pendingOp != NULL) {       // Is there an incomplete operation under way?
     if (pendingOp->EventOp == InsertEventOp)
        InsertQueueHelper(pendingOp,device,TRUE);
     else
        DeleteQueueHelper((DELETEQUEUE_OP *)pendingOp);
  }
  /* Mark the node to allow a single insertion of the node */
  timerEventNode->Next = (TIMER_EVENT_NODE *)&des;
  device->PendingQueueOperation = &des; // Post the insertion for other tasks
  InsertQueueHelper(&des,device,TRUE);  // Do the insertion
  device->PendingQueueOperation = NULL;
  return TRUE;
} /* end of OSScheduleTimerEvent */


/* InsertQueueHelper: Performs the insertion described by a descriptor into a sorted
** queue. Whenever an enqueuer is interrupted in the midst of the insertion by another
** task, the latter task inserts the node of the interrupted enqueuer before completing
** its own operation.
** Parameters:
**   (1) (INSERTQUEUE_OP *) insertion operation to perform;
**   (2) (TIMER_ISR_DATA *) descriptor to the timer in order to retrieve the current time
**          and to generate an interrupt if needed;
**   (3) (BOOL) TRUE when not called from the timer ISR. */
void InsertQueueHelper(INSERTQUEUE_OP *des, TIMER_ISR_DATA *device, BOOL genInterrupt)
{
  INT32 scheduledTime;
  TIMER_EVENT_NODE *right, *left = des->Left;
  /* Finish completing the time at which the event takes place. This is done here so that
  ** the timer ISR can correct this time. Because the timer ISR shifts its current time
  ** to avoid overflow, the event occurrence time may not be finalized without the ISR's
  ** awareness. */
  #if defined(STM32L1XXXX) && defined(OS_IO_TIM5)
     if (device->Base == BASE_TIM5) {
  #elif defined(STM32F2XXXX) || defined(STM32F4XXXX)
     if (device->Base == BASE_TIM2 || device->Base == BASE_TIM5) {
  #endif
  #if defined(STM32L1XXXX) && defined(OS_IO_TIM5) ||  defined(STM32F2XXXX) || defined(STM32F4XXXX)
        /* 32-bit counter version */
        if (OSINT32_LL(&des->Node->Time) == -1) {
           if (des->Version == device->Time) // If version backup is different than current a time shift occurred
              scheduledTime = des->Time;
           else
              scheduledTime = des->Time - SHIFT_TIME_LIMIT;
           while (OSINT32_LL(&des->Node->Time) == -1)
              if (OSINT32_SC(&des->Node->Time,scheduledTime))
                 break;
        }
     }
     else {
  #endif
        /* 16-bit counter version */
        if (OSINT32_LL(&des->Node->Time) == -1) {
           if (des->Version > device->Time) // If 16-bit MSB backup is greater than current a time shift occurred
              scheduledTime = des->Time - SHIFT_TIME_LIMIT;
           else
              scheduledTime = des->Time;
           while (OSINT32_LL(&des->Node->Time) == -1)
              if (OSINT32_SC(&des->Node->Time,scheduledTime))
                 break;
        }
  #if defined(STM32L1XXXX) && defined(OS_IO_TIM5) ||  defined(STM32F2XXXX) || defined(STM32F4XXXX)
     }
  #endif
  while (TRUE) {         // Loop until done
     right = left->Next; // Get adjacent node
     if (des->Done)      // Has a higher priority task finished the work?
        break;
     else if (right == des->Node) { // Is the node already in the queue?
        des->Done = TRUE;           // Mark that node has been inserted
        break;
     }
     else if (right == NULL || des->Node->Time < right->Time) {
        UINTPTR *successorNode = (UINTPTR *)&des->Node->Next;
        while (OSUINTPTR_LL(successorNode) == (UINTPTR)des)
           if (OSUINTPTR_SC(successorNode,(UINTPTR)right))
              break;
        while (OSUINTPTR_LL((UINTPTR *)&left->Next) == (UINTPTR)right) {
           /* At this point an ABA problem can arise: Say that a task inserts node N
           ** between nodes A and B, and gets preempted. Another task completes the in-
           ** sertion, and then removes N. In this case, node N must not be reinserted.
           ** To correct this flaw, we simply need to check if another task completed the
           ** current insertion. */
           if (des->Done || OSUINTPTR_SC((UINTPTR *)&left->Next,(UINTPTR)des->Node))
              break;
        }
        des->Done = TRUE; // Mark that node has been inserted
        break;
     }
     else
        left = des->Left = right;
  }
  /* Generate a timer comparator interrupt if the inserted event is the first one. */
  if (genInterrupt &&  device->EventQueue == des->Node) {
     #if defined(STM32L1XXXX) && defined(OS_IO_TIM5)
        if (device->Base == BASE_TIM5) {
     #elif defined(STM32F2XXXX) || defined(STM32F4XXXX)
        if (device->Base == BASE_TIM2 || device->Base == BASE_TIM5) {
     #endif
     #if defined(STM32L1XXXX) && defined(OS_IO_TIM5) ||  defined(STM32F2XXXX) || defined(STM32F4XXXX)
           /* 32-bit counter version */
           do {
              OSUINT32_LL((UINT32 *)(device->Base + OFFSET_COMPARATOR));
              if (des->GeneratedInterrupt) return;
           } while (!OSUINT32_SC((UINT32 *)(device->Base + OFFSET_COMPARATOR),des->Node->Time));
           if (*(UINT32 *)(device->Base + OFFSET_COMPARATOR) <= *(UINT32 *)(device->Base + OFFSET_COUNTER))
              do {
                 OSUINT16_LL((UINT16 *)(device->Base + OFFSET_EVENT_GENERATION));
                 if (des->GeneratedInterrupt) return;
              } while (!OSUINT16_SC((UINT16 *)(device->Base + OFFSET_EVENT_GENERATION),2));
        }
        else {
     #endif
           /* 16-bit counter version */
           do {
              OSUINT16_LL((UINT16 *)(device->Base + OFFSET_COMPARATOR));
              if (des->GeneratedInterrupt) return;
           } while (!OSUINT16_SC((UINT16 *)(device->Base + OFFSET_COMPARATOR),des->Node->Time));
           if (*(UINT16 *)(device->Base + OFFSET_COMPARATOR) <= *(UINT16 *)(device->Base + OFFSET_COUNTER))
              do {
                 OSUINT16_LL((UINT16 *)(device->Base + OFFSET_EVENT_GENERATION));
                 if (des->GeneratedInterrupt) return;
              } while (!OSUINT16_SC((UINT16 *)(device->Base + OFFSET_EVENT_GENERATION),2));
     #if defined(STM32L1XXXX) && defined(OS_IO_TIM5) ||  defined(STM32F2XXXX) || defined(STM32F4XXXX)
        }
     #endif
  }
  des->GeneratedInterrupt = TRUE;
} /* end of InsertQueueHelper */


/* OSUnScheduleTimerEvent: Entry point to remove the first occurrence of a specified
** event from the list associated with a timer. */
BOOL OSUnScheduleTimerEvent(void *event, UINT8 interruptIndex)
{
  DELETEQUEUE_OP des, *pendingOp;
  TIMER_ISR_DATA *device;
  des.EventOp = DeleteEventOp;  // Prepare the removal so that other task may complete
  des.Done = FALSE;             // it.
  device = (TIMER_ISR_DATA *)OSGetTimerISRDescriptor(interruptIndex,GetInterruptSubIndex(interruptIndex));
  des.Left = (TIMER_EVENT_NODE *)&device->EventQueue;
  des.Event = event;
  des.Node = (TIMER_EVENT_NODE *)&des;
  pendingOp = device->PendingQueueOperation;
  if (pendingOp != NULL) {      // Is there an incomplete operation under way?
     if (pendingOp->EventOp == InsertEventOp)
        InsertQueueHelper((INSERTQUEUE_OP *)pendingOp,device,TRUE);
     else
        DeleteQueueHelper(pendingOp);
  }
  device->PendingQueueOperation = &des;    // Post the removal for other tasks
  DeleteQueueHelper(&des);                 // Do the operation
  device->PendingQueueOperation = NULL;
  if (des.Node != (TIMER_EVENT_NODE *)&des) {
     ReleaseNode(device,des.Node);
     return TRUE;
  }
  else
     return FALSE;
} /* end of OSUnScheduleTimerEvent */


/* DeleteQueueHelper: Performs the delete operation described by a descriptor from a list
** of events. Whenever a deleter is interrupted in the midst of this operation by another
** task, the latter task removes the node of the interrupted deleter before completing
** its own operation. */
void DeleteQueueHelper(DELETEQUEUE_OP *des)
{
  TIMER_EVENT_NODE *right, *left = des->Left;
  while (TRUE) {             // Loop until done
     right = left->Next;     // Get adjacent node
     if (des->Done)          // Has a higher priority task finished the work?
        break;
     else if (right == NULL) {  // Is the seeked node already removed from the queue?
        des->Done = TRUE;       // Mark that node has been inserted
        break;
     }
     else if (des->Event == right->Event) {
        while (OSUINTPTR_LL((UINTPTR *)&des->Node) == (UINTPTR)des && !des->Done)
           if (OSUINTPTR_SC((UINTPTR *)&des->Node,(UINTPTR)right))
              break;
        while (OSUINTPTR_LL((UINTPTR *)&left->Next) == (UINTPTR)right)
           if (des->Done || OSUINTPTR_SC((UINTPTR *)&left->Next,(UINTPTR)right->Next))
              break;
        des->Done = TRUE;    // Mark that the node has been removed
        break;
     }
     else
        left = des->Left = right;
  }
} /* end of DeleteQueueHelper */


/* GetFreeNode: : Returns a node from the pool of free nodes. NULL is returned when
** none are available. The free node list is considered to be a stack of nodes. */
TIMER_EVENT_NODE *GetFreeNode(TIMER_ISR_DATA *des)
{
  TIMER_EVENT_NODE *node;
  while ((node = (TIMER_EVENT_NODE *)OSUINTPTR_LL((UINTPTR *)&des->FreeNodes)) != NULL)
     if (OSUINTPTR_SC((UINTPTR *)&des->FreeNodes,(UINTPTR)node->Next))
        break;
  return node;
} /* end of GetFreeNode */


/* ReleaseNode: Returns a node to the pool of free nodes. */
void ReleaseNode(TIMER_ISR_DATA *device, TIMER_EVENT_NODE *freeNode)
{
  while (TRUE) {
     freeNode->Next = (TIMER_EVENT_NODE *)OSUINTPTR_LL((UINTPTR *)&device->FreeNodes);
     if (OSUINTPTR_SC((UINTPTR *)&device->FreeNodes,(UINTPTR)freeNode))
        return;
  }
} /* end of ReleaseNode */


void TimerIntHandler(TIMER_ISR_DATA *device)
{
  TIMER_EVENT_NODE *eventNode;
  INSERTQUEUE_OP *pendingOp;
  INT32 timeMSB;
  /* First finalize any pending operation in case there is an inserted node that already
  ** has its occurrence time but is not yet in the queue. */
  pendingOp = (INSERTQUEUE_OP *)device->PendingQueueOperation;
  if (pendingOp != NULL) {       // Is there an incomplete operation under way?
     if (pendingOp->EventOp == InsertEventOp)
        InsertQueueHelper(pendingOp,device,FALSE);
     else
        DeleteQueueHelper((DELETEQUEUE_OP *)pendingOp);
  }
  device->PendingQueueOperation = NULL;
  do {
     /* shifting of the temporal values. */
     if (*(UINT16 *)(device->Base + OFFSET_STATUS) & 1) { // Is timer overflow interrupt?
        *(UINT16 *)(device->Base + OFFSET_STATUS) &= ~1;  // Clear interrupt flag
        #if defined(STM32L1XXXX) && defined(OS_IO_TIM5)
           if (device->Base == BASE_TIM5) {
        #elif defined(STM32F2XXXX) || defined(STM32F4XXXX)
           if (device->Base == BASE_TIM2 || device->Base == BASE_TIM5) {
        #endif
        #if defined(STM32L1XXXX) && defined(OS_IO_TIM5) ||  defined(STM32F2XXXX) || defined(STM32F4XXXX)
              /* 32-bit counter version */
              eventNode = device->EventQueue;
              while (eventNode != NULL) {
                 eventNode->Time -= SHIFT_TIME_LIMIT;
                 eventNode = eventNode->Next;
              }
              device->Time += 1; // Increment version number
           }
           else {
        #endif
              /* 16-bit counter version */
              device->Time += 1; // Increment MSB of time
              if (device->Time >= SHIFT_TIME_LIMIT_16) { // Shift all time value
                 eventNode = device->EventQueue;
                 while (eventNode != NULL) {
                    eventNode->Time -= SHIFT_TIME_LIMIT;
                    eventNode = eventNode->Next;
                 }
                 device->Time -= SHIFT_TIME_LIMIT_16;
              }
        #if defined(STM32L1XXXX) && defined(OS_IO_TIM5) ||  defined(STM32F2XXXX) || defined(STM32F4XXXX)
           }
        #endif
     }
     while (TRUE) {
        /* Disable timer comparator */
        #if defined(STM32L1XXXX) && defined(OS_IO_TIM5)
           if (device->Base == BASE_TIM5) {
        #elif defined(STM32F2XXXX) || defined(STM32F4XXXX)
           if (device->Base == BASE_TIM2 || device->Base == BASE_TIM5) {
        #endif
        #if defined(STM32L1XXXX) && defined(OS_IO_TIM5) ||  defined(STM32F2XXXX) || defined(STM32F4XXXX)
              /* 32-bit counter version */
              *(UINT32 *)(device->Base + OFFSET_COMPARATOR) = 0;
           }
           else {
        #endif
              /* 16-bit counter version */
              *(UINT16 *)(device->Base + OFFSET_COMPARATOR) = 0;
        #if defined(STM32L1XXXX) && defined(OS_IO_TIM5) ||  defined(STM32F2XXXX) || defined(STM32F4XXXX)
           }
        #endif
        /* Clear interrupt flag */
        *(UINT16 *)(device->Base + OFFSET_STATUS) &= ~2;
        #if defined(STM32L1XXXX) && defined(OS_IO_TIM5)
           if (device->Base == BASE_TIM5) {
        #elif defined(STM32F2XXXX) || defined(STM32F4XXXX)
           if (device->Base == BASE_TIM2 || device->Base == BASE_TIM5) {
        #endif
        #if defined(STM32L1XXXX) && defined(OS_IO_TIM5) ||  defined(STM32F2XXXX) || defined(STM32F4XXXX)
               /* 32-bit counter version */
              /* Schedule events that now occur */
              while ((eventNode = device->EventQueue) != NULL && eventNode->Time <= *(UINT32 *)(device->Base + OFFSET_COUNTER)) {
                 OSScheduleSuspendedTask(eventNode->Event);
                 device->EventQueue = eventNode->Next;
                 ReleaseNode(device,eventNode);
              }
              /* Program the next timer comparator */
              if (eventNode != NULL) {
                 *(UINT32 *)(device->Base + OFFSET_COMPARATOR) = eventNode->Time;
                 if (*(UINT32 *)(device->Base + OFFSET_COMPARATOR) > *(UINT32 *)(device->Base + OFFSET_COUNTER))
                    break;
              }
              else
                 break;
           }
           else {
        #endif
              /* 16-bit counter version */
              /* Schedule events that now occur */
              timeMSB = device->Time << 16;
              while ((eventNode = device->EventQueue) != NULL && eventNode->Time <=
                                 (timeMSB | *(UINT16 *)(device->Base + OFFSET_COUNTER))) {
                 OSScheduleSuspendedTask(eventNode->Event);
                 device->EventQueue = eventNode->Next;
                 ReleaseNode(device,eventNode);
              }
              /* Program the next timer comparator */
              if (eventNode != NULL && (eventNode->Time & 0xFFFF0000) == timeMSB) {
                 *(UINT16 *)(device->Base + OFFSET_COMPARATOR) = (UINT16)eventNode->Time;
                 if (*(UINT16 *)(device->Base + OFFSET_COMPARATOR) >
                                               *(UINT16 *)(device->Base + OFFSET_COUNTER))
                    break;
              }
              else
                 break;
        #if defined(STM32L1XXXX) && defined(OS_IO_TIM5) ||  defined(STM32F2XXXX) || defined(STM32F4XXXX)
           }
        #endif
     }
  } while ((*(UINT16 *)(device->Base + OFFSET_STATUS) & 3) != 0);
} /* end of TimerIntHandler */
