==> beber007/escapement/ZottaOS/msp430/ZottaOS_TimerEvent.c <==
#include "ZottaOS.h"
#include "ZottaOS_TimerEvent.h"
#define SHIFT_TIME_LIMIT     0x40000000 // = 2^30
#define SHIFT_TIME_LIMIT_16  0x4000     // = 2^30 >> 16

BOOL OSScheduleTimerEvent(void *event, UINT32 delay, UINT8 interruptIndex)
{
  TIMER_EVENT_NODE *timerEventNode;
  SOFTWARE_TIMER_ISR_DATA *device;
  INSERTQUEUE_OP des, *pendingOp;
  device = (SOFTWARE_TIMER_ISR_DATA *)OSGetISRDescriptor(interruptIndex);
  if ((timerEventNode = GetFreeNode(device)) == NULL)
     return FALSE;
  /* Because the timer ISR can shift the current time, the time at which this event oc-
  ** curs is done in 2 steps. The time is determined here and then transferred to the
  ** event at the last moment so that if there is a time shift, it can be detected and
  ** corrected. */
  do {
     des.Version = device->Time; // Save current 16-bit MSB time to detect time shifting
     des.Time = *device->Counter + delay + ((INT32)des.Version << 16);
  } while (des.Version != device->Time);
  timerEventNode->Time = -1;     // Set at an uninitialized sentinel value
  timerEventNode->Event = event;
  des.EventOp = InsertEventOp;   // Prepare the insertion so that other task may
  des.Done = FALSE;              // complete it.
  des.Left = (TIMER_EVENT_NODE *)&device->EventQueue;
  des.Node = timerEventNode;
  des.GeneratedInterrupt = FALSE;
  pendingOp = (INSERTQUEUE_OP *)device->PendingQueueOperation;
  if (pendingOp != NULL) {       // Is there an incomplete operation under way?
     if (pendingOp->EventOp == InsertEventOp)
        InsertQueueHelper(pendingOp,device,TRUE);
     else
        DeleteQueueHelper((DELETEQUEUE_OP *)pendingOp);
  }
  /* Mark the node to allow a single insertion of the node */
  timerEventNode->Next = (TIMER_EVENT_NODE *)&des;
  device->PendingQueueOperation = &des;    // Post the insertion for other tasks
  InsertQueueHelper(&des,device,TRUE);     // Do the insertion
  device->PendingQueueOperation = NULL;
  return TRUE;
}

void InsertQueueHelper(INSERTQUEUE_OP *des, SOFTWARE_TIMER_ISR_DATA *device, BOOL genInterrupt)
{
  INT32 scheduledTime;
  TIMER_EVENT_NODE *right, *left = des->Left;
  /* Finish completing the time at which the event takes place. This is done here so that
  ** the timer ISR can correct this time. Because the timer ISR shifts its current time
  ** to avoid overflow, the event occurrence time may not be finalized without the ISR's
  ** awareness. */
  if (OSINT32_LL(&des->Node->Time) == -1) {
     if (des->Version > device->Time) // If 16-bit MSB backup is greater than current a time shift occurred
        scheduledTime = des->Time - SHIFT_TIME_LIMIT;
     else
        scheduledTime = des->Time;
     while (OSINT32_LL(&des->Node->Time) == -1)
        if (OSINT32_SC(&des->Node->Time,scheduledTime))
           break;
  }
  while (TRUE) {         // Loop until done
     right = left->Next; // Get adjacent node
     if (des->Done)      // Has a higher priority task finished the work?
        break;
     else if (right == des->Node) { // Is the node already in the queue?
        des->Done = TRUE;           // Mark that node has been inserted
        break;
     }
     else if (right == NULL || des->Node->Time < right->Time) {
        UINTPTR *successorNode = (UINTPTR *)&des->Node->Next;
        while (OSUINTPTR_LL(successorNode) == (UINTPTR)des)
           if (OSUINTPTR_SC(successorNode,(UINTPTR)right))
              break;
        while (OSUINTPTR_LL((UINTPTR *)&left->Next) == (UINTPTR)right) {
           /* At this point an ABA problem can arise: Say that a task inserts node N
           ** between nodes A and B, and gets preempted. Another task completes the in-
           ** sertion, and then removes N. In this case, node N must not be reinserted.
           ** To correct this flaw, we simply need to check if another task completed the
           ** current insertion. */
           if (des->Done || OSUINTPTR_SC((UINTPTR *)&left->Next,(UINTPTR)des->Node))
              break;
        }
        des->Done = TRUE; // Mark that node has been inserted
        break;
     }
     else
        left = des->Left = right;
  }
  /* Generate a timer comparator interrupt if the inserted event is the first one. */
  if (genInterrupt && device->EventQueue == des->Node) {
     do {
        OSUINT16_LL(device->Compare);
        if (des->GeneratedInterrupt) return;
     } while (!OSUINT16_SC(device->Compare,des->Node->Time));
     if (*device->Compare <= *device->Counter)
        *device->PortIFG |= device->PortPinBit;
  }
  des->GeneratedInterrupt = TRUE;
}

BOOL OSUnScheduleTimerEvent(void *event, UINT8 interruptIndex)
{
  DELETEQUEUE_OP des, *pendingOp;
  SOFTWARE_TIMER_ISR_DATA *device;
  des.EventOp = DeleteEventOp;  // Prepare the removal so that other task may complete
  des.Done = FALSE;             // it.
  device = (SOFTWARE_TIMER_ISR_DATA *)OSGetISRDescriptor(interruptIndex);
  des.Left = (TIMER_EVENT_NODE *)&device->EventQueue;
  des.Event = event;
  des.Node = (TIMER_EVENT_NODE *)&des;
  pendingOp = device->PendingQueueOperation;
  if (pendingOp != NULL) {      // Is there an incomplete operation under way?
     if (pendingOp->EventOp == InsertEventOp)
        InsertQueueHelper((INSERTQUEUE_OP *)pendingOp,device,TRUE);
     else
        DeleteQueueHelper(pendingOp);
  }
  device->PendingQueueOperation = &des;    // Post the removal for other tasks
  DeleteQueueHelper(&des);                 // Do the operation
  device->PendingQueueOperation = NULL;
  if (des.Node != (TIMER_EVENT_NODE *)&des) {
     ReleaseNode(device,des.Node);
     return TRUE;
  }
  else
     return FALSE;
}

void TimerIntHandler(TIMER_ISR_DATA *device)
{
  *device->InterruptFlag = TRUE;                   // Save the state
  *device->PortIFG |= device->PortPinBit;          // Generate software interrupt
  *device->TimerControl |= device->TimerEnableBit; // Re-enable timer interrupt
}
